# bgmtest_nceprsm

./: .gitignore  CMakeLists.txt  README.md  addprtb.f90  calcte.f90  compile.sh  run_addprtb.sh  run_calcte.sh
common/: CMakeLists.txt  date_module.f90  func_module.f90  kind_module.f90  norm_module.f90  phconst_module.f90  read_module.f90  rsmcom_module.f90  write_module.f90
lib/src/w3lib-1.7/: CHANGES  Makefile  bacio.v1.3.c  makelibw3.sh  makelibw3_gfort.sh  makelibw3_ibmsp.sh  makelibw3_ifort.sh  makelibw3_pgf90.sh  mova2i.c  w3fi63.f
